# VLC_Locator

./: .gitignore  LICENSE  README.md
Projeto/Microcrontrolador/CCS/: blink.txt  nblink.txt  pwm.txt
Projeto/Servidor-Visualizador Gráfico/: VLC_Localizator_visualizer_v2.py  VLC_Localizator_visualizer_v3.py
Projeto/VLCLocator/: settings.gradle
Projeto/VLCLocator/app/: CMakeLists.txt  build.gradle
Projeto/VLCLocator/app/src/androidTest/java/com/example/vlclocator/: ExampleInstrumentedTest.java
Projeto/VLCLocator/app/src/main/: AndroidManifest.xml
Projeto/VLCLocator/app/src/main/cpp/: Perspective_n_Point.c  Perspective_n_Point.h  biblioteca_polinomio.c  biblioteca_polinomio.h  matrix.c  matrix.h  native-lib.cpp  pnp_jni.c
Projeto/VLCLocator/app/src/main/java/com/example/vlclocator/: CameraActivity.java  CameraCharacteristicsHolder.java  CameraListActivity.java  ImageProcessing.java  SaveImageFileClass.java  SingleMediaScanner.java
Projeto/VLCLocator/app/src/main/res/layout/: activity_camera.xml  activity_camera_list.xml
Projeto/VLCLocator/app/src/main/res/menu/: camera_menu.xml
Projeto/VLCLocator/app/src/main/res/values/: strings.xml  themes.xml
Projeto/VLCLocator/app/src/main/res/values-night/: themes.xml
Projeto/VLCLocator/app/src/test/java/com/example/vlclocator/: ExampleUnitTest.java
Testes/: Config_usada.TSC  Testes_de_erro.xlsx
Testes/ImageProcessingTests/Matlab/: findCenterOfBlobs.m  getCoordinatesOfBlob.m  graficos_gerais.m  main.m  plot_frequency_domain.m  plot_isolated_blob.m
Testes/PnP/bisection_method/: biblioteca_polinomio.c  main.c  (+2 more)
(+82 files in other folders)
